<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/tableLayout1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="fill_parent">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_column="1"
            />
        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/make_field"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1"
                android:text="@string/model" />

            <TextView
                android:id="@+id/model_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />

        </TableRow>


        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/year_field"
                android:layout_column="2" />

        </TableRow>


        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/power_field"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/country_field"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/cartype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_type"
                android:layout_column="2" />

        </TableRow>

    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_below="@+id/tableLayout1"
>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/production_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_gravity="center_horizontal"

                />
        </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <fragment
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            class="com.google.android.gms.maps.SupportMapFragment" />

    </TableRow>


        </TableLayout>


</RelativeLayout>